<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff5f5f5"
    android:orientation="vertical" >

    <cn.sharesdk.framework.TitleLayout
        android:id="@+id/llTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/llTitle" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <Button
                android:id="@+id/btnSw"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_back"
                android:text="@string/get_user_info_sw"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnTc"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_back"
                android:text="@string/get_user_info_tc"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnFb"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_back"
                android:text="@string/get_user_info_fb"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnTw"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_back"
                android:text="@string/get_user_info_tw"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnRr"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_back"
                android:text="@string/get_user_info_rr"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnQz"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_back"
                android:text="@string/get_user_info_qz"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnDb"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_back"
                android:text="@string/get_user_info_db"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnNemb"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_back"
                android:text="@string/get_user_info_nemb"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnEn"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_back"
                android:text="@string/get_user_info_en"
                android:textSize="16dp" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llTitle"
        android:background="@drawable/title_shadow" />

</RelativeLayout>