<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff5f5f5"
    android:orientation="vertical" >

    <cn.sharesdk.framework.TitleLayout
        android:id="@+id/llTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_back" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/llTitle" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <Button
                android:id="@+id/btnShareAllGui"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_back"
                android:text="@string/demo_share_all_gui"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnShareAll"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_back"
                android:text="@string/demo_share_all"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnFlSw"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back"
                    android:text="@string/sm_item_fl_weibo"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/btnFlTc"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back"
                    android:text="@string/sm_item_fl_tc"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnGetToken"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back"
                    android:text="@string/demo_get_access_token"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/btnVisitWc"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back"
                    android:text="@string/sm_item_visit_wechat"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnGetInfor"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back"
                    android:text="@string/demo_get_my_info"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/btnGetUserInfor"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back"
                    android:text="@string/demo_get_other_info"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnShareSw"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back"
                    android:text="@string/demo_share_to_sw"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/btnShareTc"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back"
                    android:text="@string/demo_share_to_tc"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnShareFb"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back"
                    android:text="@string/demo_share_to_fb"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/btnShareTw"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back"
                    android:text="@string/demo_share_to_tw"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnShareRr"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back"
                    android:text="@string/demo_share_to_rr"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/btnShareQz"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back"
                    android:text="@string/demo_share_to_qz"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnShareDb"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back"
                    android:text="@string/demo_share_to_db"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/btnShareEn"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back"
                    android:text="@string/demo_share_to_en"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnShareNemb"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back"
                    android:text="@string/demo_share_to_nemb"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/btnShareSh"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_back"
                    android:text="@string/demo_share_to_sh"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llTitle"
        android:background="@drawable/title_shadow" />

</RelativeLayout>